set(ATOMIC_CPLUSPLUS_EXAMPLES 0 CACHE BOOL "" FORCE)
set(ATOMIC_DATABASE_SQLITE 0 CACHE BOOL "" FORCE)
set(ATOMIC_WEBVIEW 0 CACHE BOOL "" FORCE)
set(ATOMIC_JAVASCRIPT 0 CACHE BOOL "" FORCE)
set(ATOMIC_DOTNET 0 CACHE BOOL "" FORCE)
set(ATOMIC_EDITOR 0 CACHE BOOL "" FORCE)
set(ATOMIC_TOOL_DIR ${CMAKE_BINARY_DIR}/bin/Tools)
add_subdirectory(AtomicGameEngine)
add_subdirectory(UrhoUI)
add_subdirectory(tinyfiledialogs)
